force-app/main/default/objects/ConsentLineItem__c/ConsentLineItem__c.object-meta.xml
<CustomObject>
    <description>Junction object for Consent template and consent</description>
    <label>Consent Line Item</label>
    <nameField>
        <label>Consent Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>