force-app/main/default/objects/ConsentLineItem__c/fields/ConsentTemplate__c.field-meta.xml
<CustomField>
    <fullName>ConsentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to templates</description>
    <label>Consent Template</label>
    <referenceTo>ConsentTemplate__c</referenceTo>
    <relationshipLabel>Consent Line Items</relationshipLabel>
    <relationshipName>ConsentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>