force-app/main/default/objects/ConsentLineItem__c/fields/FinancialProductCode__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductCode__c</fullName>
    <formula>FinancialProduct__r.InternalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Product Code</label>
    <type>Text</type>
</CustomField>