force-app/main/default/objects/ConsentLineItem__c/fields/FinancialProductName__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductName__c</fullName>
    <formula>FinancialProduct__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Product Name</label>
    <type>Text</type>
</CustomField>