force-app/main/default/objects/ConsentLineItem__c/fields/FinancilProductCategory__c.field-meta.xml
<CustomField>
    <fullName>FinancilProductCategory__c</fullName>
    <description>Financil Product Category</description>
    <inlineHelpText>Financil Product Category</inlineHelpText>
    <label>Financil Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancialProductCategory</valueSetName>
    </valueSet>
</CustomField>