force-app/main/default/objects/ConsentLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Name of the product to which Consent belongs</description>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>