force-app/main/default/objects/ConsentLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ConsentTemplate__c</columns>
    <columns>EventIdentifier__c</columns>
    <columns>FinancialProduct__c</columns>
    <columns>isActive__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>